2005-01-13  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	
	Moved OnAdded, OnChanged, and OnRemoved from AddWindow into 
	AddAlbumWindow and AddSongWindow to please Mono 1.0.

2005-01-11  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-xine.c: (signal_idle), (player_construct),
	(player_open), (player_pause), (player_seek):

	Cleanup GTimer code.
	
	* src/SkipToWindow.cs:

	Set slider value after setting the range.

2005-01-11  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Minor cleanup.

2005-01-11  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/NotificationAreaIcon.cs:

	Keep comments to translators on the line above the call to GetString,
	this is to make sure they appear in the .po files.

2005-01-10  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/Song.cs:
	* src/StringUtils.cs:

	Remove empty artist and performer listings which can sometimes occur
	in metadata. This turns " and foo" into "foo".

2005-01-10  Tamara Roberson  <foxxygirltamara@gmail.com>
	
	* data/glade/PlaylistWindow.glade:
	* data/ui/NotificationAreaIcon.xml:
	* data/ui/PlaylistWindow.xml:
	* src/About.cs:
	* src/Actions.cs:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/Album.cs:
	* src/ColoredCellRendererPixbuf.cs:
	* src/Config.cs:
	* src/CoverDatabase.cs:
	* src/CoverGetter.cs:
	* src/CoverImage.cs:
	* src/Database.cs:
	* src/DndUtils.cs:
	* src/EllipsizingLabel.cs:
	* src/ErrorDialog.cs:
	* src/FileSelector.cs:
	* src/FileUtils.cs:
	* src/Global.cs:
	* src/GnomeProxy.cs:
	* src/HandleView.cs:
	* src/ImportDialog.cs:
	* src/InfoWindow.cs: 
	* src/Item.cs:
	* src/KeyUtils.cs:
	* src/MarkupUtils.cs:
	* src/Metadata.cs:
	* src/MmKeys.cs:
	* src/MuineDBusService.cs:
	* src/NoMusicFoundWindow.cs:
	* src/NotificationAreaIcon.cs:
	* src/OpenDialog.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/PluginManager.cs:
	* src/ProgressWindow.cs: